# agentic_ai

./: .gitignore  pyproject.toml
andrew_ng_agenticai/: pyproject.toml
andrew_ng_agenticai/autonomous_agents/customer_service_agent/: M5_UGL_1_R.ipynb  store_db.json
andrew_ng_agenticai/autonomous_agents/market_research_team/: M5_UGL_2.ipynb  campaign_summary_2025-11-15_17-22-49.md  campaign_summary_2025-11-15_17-27-42.md
andrew_ng_agenticai/evals/: M4_UGL_1.ipynb
andrew_ng_agenticai/reflection/chart_generation/: M2_UGL_1.ipynb
andrew_ng_agenticai/reflection/sql_generation/: M2_UGL_2.ipynb  products.db
andrew_ng_agenticai/tools/email_assisstant_workflow/: .gitignore  M3_UGL_2.ipynb  README.md
andrew_ng_agenticai/tools/email_assisstant_workflow/email_server/: email_tools.py
andrew_ng_agenticai/tools/first_tool_example/: M3_UGL_1.ipynb  weather_note.txt
arjan_agenticai/ai_design_patterns/: chain_of_responsibility.py  combined_patterns.py  observer.py  stratergy.py
arjan_agenticai/pydanticai/: health_triage.py  health_triage_langgraph.py  pyproject.toml
