[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aisuite==0.1.11",
    "anthropic>=0.72.0",
    "docstring-parser>=0.17.0",
    "duckdb>=1.4.1",
    "fastapi>=0.121.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "jupyter-server>=2.17.0",
    "markdown>=3.10",
    "matplotlib>=3.10.7",
    "mistralai>=1.5.2",
    "nbclassic>=1.3.3",
    "notebook>=7.4.7",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
    "tabulate>=0.9.0",
    "tavily-python==0.7.12",
    "textstat>=0.7.11",
    "tinydb>=4.8.2",
    "uvicorn[standard]>=0.38.0",
    "vertexai>=1.71.1",
    "wikipedia>=1.4.0",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.8"
]
